--- a/dispatched-orders.html
+++ b/dispatched-orders.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png" />
+    <link rel="icon" href="assets/images/VenderLogo.png" type="image/png" />
     <!--plugins-->
     <link href="assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
     <link href="assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
     <link href="assets/css/semi-dark.css" rel="stylesheet" />
     <link href="assets/css/header-colors.css" rel="stylesheet" />
 
-    <title>Onedash - Bootstrap 5 Admin Template</title>
+    <title>Dispatch</title>
 </head>
 
 <body>
@@ -952,7 +952,7 @@
                                     <td>$1500.00</td>
                                     <td>65</td>
                                     <td>
-                                        <span class="badge bg-light-warning text-warning w-50">Pending</span>
+                                        <span class="badge bg-light-warning text-warning ">Pending</span>
                                     </td>
                                     <td>
                                         <div class="table-actions d-flex align-items-center  fs-6">
@@ -1031,7 +1031,7 @@
                         <td>$1500.00</td>
                         <td>78</td>
                         <td>
-                            <span class="badge bg-light-warning text-warning w-50">Pending</span>
+                            <span class="badge bg-light-warning text-warning ">Pending</span>
                         </td>
                         <td>
                             <div class="table-actions d-flex align-items-center fs-6">
