--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="card-body ">
                 <h5 class="card-title text-center">Admin Login</h5>
                 <p class="card-text text-center">Welcome back, please login to your account.</p>
-                <form class="form-body">
+                <form class="form-body" id="loginForm">
                   <div class="b-grid">
                   </div>
               </div>
@@ -52,7 +52,7 @@
                   <div class="ms-auto position-relative">
                     <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i
                         class="bi bi-envelope-fill"></i></div>
-                    <input type="email" class="form-control radius-7 ps-5" id="inputEmailAddress"
+                    <input type="email" class="form-control radius-7 ps-5" id="loginEmailAddress"
                       placeholder="Email Address">
                   </div>
                 </div>
@@ -61,14 +61,13 @@
                   <div class="ms-auto position-relative">
                     <div class="position-absolute top-50 translate-middle-y search-icon px-3"><i
                         class="bi bi-lock-fill"></i></div>
-                    <input type="password" class="form-control radius-7 ps-5" id="inputChoosePassword"
+                    <input type="password" class="form-control radius-7 ps-5" id="loginPassword"
                       placeholder="Enter Password">
                   </div>
                 </div>
                 <div class="col-12">
                   <div class="d-grid">
-                    <button type="submit" class="btn custom-btn-color  radius-7"><a class="text-white"
-                        href="dashboard.html">Login</a></button>
+                    <button style="color: aliceblue;" type="submit" class="btn custom-btn-color  radius-7">Login</button>
                   </div>
                 </div>
               </div>
@@ -87,6 +86,8 @@
 
 
   <!--plugins-->
+
+  <script src="assets/js/login.js"></script>
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/pace.min.js"></script>
 
