--- a/dashboard.html
+++ b/dashboard.html
@@ -833,7 +833,7 @@
                                             <th>Quantity</th>
                                             <th>Price</th>
                                             <th>Date</th>
-                                            <th>Actions</th>
+                                            <!-- <th>Actions</th> -->
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -852,7 +852,7 @@
                                             <td>2</td>
                                             <td>$214</td>
                                             <td>Apr 8, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -867,7 +867,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>#68570</td>
@@ -884,7 +884,7 @@
                                             <td>1</td>
                                             <td>$185</td>
                                             <td>Apr 9, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -899,7 +899,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>#38567</td>
@@ -916,7 +916,7 @@
                                             <td>3</td>
                                             <td>$356</td>
                                             <td>Apr 10, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -931,7 +931,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>#48572</td>
@@ -948,7 +948,7 @@
                                             <td>1</td>
                                             <td>$149</td>
                                             <td>Apr 11, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -963,7 +963,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>#96857</td>
@@ -980,7 +980,7 @@
                                             <td>2</td>
                                             <td>$199</td>
                                             <td>Apr 15, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -995,7 +995,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>#96857</td>
@@ -1012,7 +1012,7 @@
                                             <td>1</td>
                                             <td>$699</td>
                                             <td>Apr 18, 2021</td>
-                                            <td>
+                                            <!-- <td>
                                                 <div class="d-flex align-items-center gap-3 fs-6">
                                                     <a href="javascript:;" class="text-primary" data-bs-toggle="tooltip"
                                                         data-bs-placement="bottom" title=""
@@ -1027,7 +1027,7 @@
                                                         data-bs-original-title="Delete" aria-label="Delete"><i
                                                             class="bi bi-trash-fill"></i></a>
                                                 </div>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
