--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link href="assets/css/bootstrap-extended.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+  
+  <!-- Include Toastr JS -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
@@ -42,6 +45,7 @@
               <div class="card-body ">
                 <h5 class="card-title text-center">Admin Login</h5>
                 <p class="card-text text-center">Welcome back, please login to your account.</p>
+                <p class="text-danger" id="loginError"></p>
                 <form class="form-body" id="loginForm">
                   <div class="b-grid">
                   </div>
@@ -67,8 +71,13 @@
                 </div>
                 <div class="col-12">
                   <div class="d-grid">
-                    <button style="color: aliceblue;" type="submit" class="btn custom-btn-color  radius-7">Login</button>
+                    <button style="color: aliceblue;" type="submit"
+                      class="btn custom-btn-color  radius-7">Login</button>
                   </div>
+                </div>
+                <div>
+                  <p class="text-center">Don't have an account? <a style="color: #01525f; font-weight: 700;"
+                      href="/admin-signup.html">Sign Up</a></p>
                 </div>
               </div>
               </form>
@@ -87,9 +96,10 @@
 
   <!--plugins-->
 
-  <script src="assets/js/login.js"></script>
+  <script  src="assets/js/login.js"></script>
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/pace.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 
 </body>
